bootstrap: fix vertical spacing of rows on /assignments page
fixes CNVS-4820

test plan:
- try /assignments and /courses/:id/assignments as a teacher and student
- rows should be evenly spaced veritally
- be sure to click the "Group Assignments by Type" button for students and
  check that as well

Reviewed-on: https://gerrit.instructure.com/18925
Tested-by: Jenkins <jenkins@instructure.com>
QA-Review: Amber Taniuchi <amber@instructure.com>
Product-Review: Simon Williams <simon@instructure.com>

--- a/app/stylesheets/g_assignments.scss
+++ b/app/stylesheets/g_assignments.scss
@@ -120,7 +120,7 @@
       border-bottom-width: 0px;
     }
     .content {
-      padding-top: 3px;
+      padding-top: 9px;
     }
     .details {
       display: block;
@@ -185,12 +185,10 @@
       &.assignment_due {
         width: 30%;
         font-size: 1em;
-        padding-top: 0.5em;
         display: block;
       }
       &.assignment_points {
-        font-size: 0.9em;
-        padding-top: 0.5em;
+        font-size: 1em;
       }
       &.links {
         display: none;
@@ -286,12 +284,10 @@
         &.assignment_due {
           width: 30%;
           font-size: 0.8em;
-          padding-top: 0.5em;
           display: block;
         }
         &.assignment_points {
           font-size: 0.8em;
-          padding-top: 0.5em;
         }
         &.buttons {
           float: right;
